; ModuleID = '/home/carl/AnghaBench/phpredis/extr_library.c_redis_read_stream_messages.c'
source_filename = "/home/carl/AnghaBench/phpredis/extr_library.c_redis_read_stream_messages.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UNSERIALIZE_VALS = common dso_local global i32 0, align 4
@SCORE_DECODE_NONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @redis_read_stream_messages(i32* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i8* null, i8** %12, align 8
  store i32 0, i32* %9, align 4
  br label %14

14:                                               ; preds = %59, %3
  %15 = load i32, i32* %9, align 4
  %16 = load i32, i32* %6, align 4
  %17 = icmp slt i32 %15, %16
  br i1 %17, label %18, label %62

18:                                               ; preds = %14
  %19 = load i32*, i32** %5, align 8
  %20 = call i64 @read_mbulk_header(i32* %19, i32* %10)
  %21 = icmp slt i64 %20, 0
  br i1 %21, label %37, label %22

22:                                               ; preds = %18
  %23 = load i32, i32* %10, align 4
  %24 = icmp ne i32 %23, 2
  br i1 %24, label %37, label %25

25:                                               ; preds = %22
  %26 = load i32*, i32** %5, align 8
  %27 = call i8* @redis_sock_read(i32* %26, i32* %13)
  store i8* %27, i8** %12, align 8
  %28 = icmp eq i8* %27, null
  br i1 %28, label %37, label %29

29:                                               ; preds = %25
  %30 = load i32*, i32** %5, align 8
  %31 = call i64 @read_mbulk_header(i32* %30, i32* %11)
  %32 = icmp slt i64 %31, 0
  br i1 %32, label %37, label %33

33:                                               ; preds = %29
  %34 = load i32, i32* %11, align 4
  %35 = srem i32 %34, 2
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %44

37:                                               ; preds = %33, %29, %25, %22, %18
  %38 = load i8*, i8** %12, align 8
  %39 = icmp ne i8* %38, null
  br i1 %39, label %40, label %43

40:                                               ; preds = %37
  %41 = load i8*, i8** %12, align 8
  %42 = call i32 @efree(i8* %41)
  br label %43

43:                                               ; preds = %40, %37
  store i32 -1, i32* %4, align 4
  br label %63

44:                                               ; preds = %33
  %45 = call i32 @array_init(i32* %8)
  %46 = load i32*, i32** %5, align 8
  %47 = load i32, i32* %11, align 4
  %48 = load i32, i32* @UNSERIALIZE_VALS, align 4
  %49 = call i32 @redis_mbulk_reply_loop(i32* %46, i32* %8, i32 %47, i32 %48)
  %50 = load i32*, i32** %5, align 8
  %51 = load i32, i32* @SCORE_DECODE_NONE, align 4
  %52 = call i32 @array_zip_values_and_scores(i32* %50, i32* %8, i32 %51)
  %53 = load i32*, i32** %7, align 8
  %54 = load i8*, i8** %12, align 8
  %55 = load i32, i32* %13, align 4
  %56 = call i32 @add_assoc_zval_ex(i32* %53, i8* %54, i32 %55, i32* %8)
  %57 = load i8*, i8** %12, align 8
  %58 = call i32 @efree(i8* %57)
  br label %59

59:                                               ; preds = %44
  %60 = load i32, i32* %9, align 4
  %61 = add nsw i32 %60, 1
  store i32 %61, i32* %9, align 4
  br label %14

62:                                               ; preds = %14
  store i32 0, i32* %4, align 4
  br label %63

63:                                               ; preds = %62, %43
  %64 = load i32, i32* %4, align 4
  ret i32 %64
}

declare dso_local i64 @read_mbulk_header(i32*, i32*) #1

declare dso_local i8* @redis_sock_read(i32*, i32*) #1

declare dso_local i32 @efree(i8*) #1

declare dso_local i32 @array_init(i32*) #1

declare dso_local i32 @redis_mbulk_reply_loop(i32*, i32*, i32, i32) #1

declare dso_local i32 @array_zip_values_and_scores(i32*, i32*, i32) #1

declare dso_local i32 @add_assoc_zval_ex(i32*, i8*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
